Supporting GrapghQL by adding few more tests

--- a/integration-tests/graphql/src/main/resources/application.properties
+++ b/integration-tests/graphql/src/main/resources/application.properties
@@ -17,3 +17,7 @@
 
 quarkus.camel.graphql.query-files=classpath:graphql/bookQuery.graphql
 quarkus.native.resources.includes = graphql/schema.graphql
+
+quarkus.http.auth.basic=true
+quarkus.security.users.embedded.enabled=true
+quarkus.security.users.embedded.plain-text=true
