--- a/integration-tests/graphql/src/main/resources/application.properties
+++ b/integration-tests/graphql/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-quarkus.camel.graphql.query-files=classpath:graphql/bookQuery.graphql
+quarkus.camel.graphql.query-files=classpath:graphql/bookQuery.graphql,classpath:graphql/addBookMutation.graphql
 quarkus.native.resources.includes = graphql/schema.graphql
 
 quarkus.http.auth.basic=true
