--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -1781,6 +1781,12 @@
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-langchain4j-chat</artifactId>
                 <version>${camel.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>dev.langchain4j</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
@@ -6702,6 +6708,16 @@
                 <groupId>io.quarkiverse.jsch</groupId>
                 <artifactId>quarkus-jsch-deployment</artifactId>
                 <version>${quarkiverse-jsch.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.langchain4j</groupId>
+                <artifactId>quarkus-langchain4j-core</artifactId>
+                <version>${quarkiverse-langchain4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.langchain4j</groupId>
+                <artifactId>quarkus-langchain4j-core-deployment</artifactId>
+                <version>${quarkiverse-langchain4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.messaginghub</groupId>
