Upgrade Quarkus to 3.8.5

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -6790,7 +6790,8 @@
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-ext-jdk18on</artifactId>
-                <version>${bouncycastle.version}</version>
+                <!-- TODO: Revert back to bouncycastle.version when a release is available -->
+                <version>${bcprov-ext-jdk18on.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.bouncycastle</groupId>
