--- a/extensions-jvm/azure-key-vault/runtime/pom.xml
+++ b/extensions-jvm/azure-key-vault/runtime/pom.xml
@@ -40,20 +40,12 @@
             <artifactId>camel-quarkus-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-support-azure-core-http-client-vertx</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-azure-key-vault</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>reactor-core</artifactId>
-                    <groupId>io.projectreactor</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!-- has to be impoprted as the version from the azure-core to avoid conflicts -->
-        <dependency>
-            <artifactId>reactor-core</artifactId>
-            <groupId>io.projectreactor</groupId>
         </dependency>
     </dependencies>
 
