Add elasticsearch-rest-client native support
Fixes #6173

--- a/tooling/scripts/test-categories.yaml
+++ b/tooling/scripts/test-categories.yaml
@@ -73,6 +73,7 @@ group-04:
   - debezium
   - cassandraql
   - couchdb
+  - elasticsearch-rest-client
   - influxdb
   - jms-qpid-amqp-client
   - jpa
