--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -97,6 +97,7 @@
         <module>direct</module>
         <module>disruptor</module>
         <module>dropbox</module>
+        <module>elasticsearch-rest-client</module>
         <module>exec</module>
         <module>fhir</module>
         <module>file</module>
