--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -88,6 +88,7 @@
         <module>digitalocean</module>
         <module>disruptor</module>
         <module>dropbox</module>
+        <module>elasticsearch-rest-client</module>
         <module>exec</module>
         <module>fhir</module>
         <module>file</module>
