Add httpclient5 support extension
Fixes #4703
Fixes #5704

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -5746,6 +5746,16 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel.quarkus</groupId>
+                <artifactId>camel-quarkus-support-httpclient5</artifactId>
+                <version>${camel-quarkus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel.quarkus</groupId>
+                <artifactId>camel-quarkus-support-httpclient5-deployment</artifactId>
+                <version>${camel-quarkus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel.quarkus</groupId>
                 <artifactId>camel-quarkus-support-jackson-dataformat-xml</artifactId>
                 <version>${camel-quarkus.version}</version>
             </dependency>
