--- a/extensions-support/pom.xml
+++ b/extensions-support/pom.xml
@@ -47,6 +47,7 @@
         <module>google-cloud</module>
         <module>google-http-client</module>
         <module>httpclient</module>
+        <module>httpclient5</module>
         <module>jackson-dataformat-xml</module>
         <module>jdbc</module>
         <module>jetty</module>
