--- a/extensions/arangodb/runtime/pom.xml
+++ b/extensions/arangodb/runtime/pom.xml
@@ -41,16 +41,12 @@
             <artifactId>camel-quarkus-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-support-httpclient</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-arangodb</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-netty</artifactId>
+            <artifactId>quarkus-vertx</artifactId>
         </dependency>
     </dependencies>
 
