--- a/extensions/as2/deployment/pom.xml
+++ b/extensions/as2/deployment/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-support-bouncycastle-deployment</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-support-httpclient5-deployment</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
