--- a/extensions/as2/runtime/pom.xml
+++ b/extensions/as2/runtime/pom.xml
@@ -53,6 +53,10 @@
             <artifactId>camel-quarkus-support-bouncycastle</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-support-httpclient5</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.slf4j</groupId>
             <artifactId>slf4j-jboss-logmanager</artifactId>
         </dependency>
