--- a/extensions/box/runtime/pom.xml
+++ b/extensions/box/runtime/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>camel-quarkus-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-support-httpclient5</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-box</artifactId>
         </dependency>
