Add Pinecone extension
Fixes #6065

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -204,6 +204,7 @@
         <module>pdf</module>
         <module>pg-replication-slot</module>
         <module>pgevent</module>
+        <module>pinecone</module>
         <module>platform-http</module>
         <module>protobuf</module>
         <module>pubnub</module>
