--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -6471,6 +6471,11 @@
                 <version>${jnr-ffi.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.github.luben</groupId>
+                <artifactId>zstd-jni</artifactId>
+                <version>${zstd-jni.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.github.mwiede</groupId>
                 <artifactId>jsch</artifactId>
                 <version>${jsch.version}</version>
@@ -7151,6 +7156,21 @@
                         <artifactId>json-simple</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.jxmpp</groupId>
+                <artifactId>jxmpp-core</artifactId>
+                <version>${jxmpp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jxmpp</groupId>
+                <artifactId>jxmpp-jid</artifactId>
+                <version>${jxmpp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jxmpp</groupId>
+                <artifactId>jxmpp-util-cache</artifactId>
+                <version>${jxmpp.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.kiwiproject</groupId>
