--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -2253,6 +2253,10 @@
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>animal-sniffer-annotations</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.xml.bind</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -2352,6 +2356,12 @@
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-soap</artifactId>
                 <version>${camel.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.sun.xml.bind</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
@@ -2450,6 +2460,12 @@
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-swift</artifactId>
                 <version>${camel.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.sun.xml.bind</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
@@ -6225,6 +6241,11 @@
                 <version>${jnr-ffi.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.github.luben</groupId>
+                <artifactId>zstd-jni</artifactId>
+                <version>${zstd-jni.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.github.mwiede</groupId>
                 <artifactId>jsch</artifactId>
                 <version>${jsch.version}</version>
@@ -6857,6 +6878,21 @@
                         <artifactId>json-simple</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.jxmpp</groupId>
+                <artifactId>jxmpp-core</artifactId>
+                <version>${jxmpp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jxmpp</groupId>
+                <artifactId>jxmpp-jid</artifactId>
+                <version>${jxmpp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jxmpp</groupId>
+                <artifactId>jxmpp-util-cache</artifactId>
+                <version>${jxmpp.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.kiwiproject</groupId>
