Add azure-key-vault native support
Fixes #6248

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -63,6 +63,7 @@
         <module>aws2-sts</module>
         <module>aws2-translate</module>
         <module>azure-eventhubs</module>
+        <module>azure-key-vault</module>
         <module>azure-storage-blob</module>
         <module>azure-storage-queue</module>
         <module>base64</module>
