Upgarde quarkus-langchain4j to 0.16.4
Fixes #6278

--- a/integration-tests/langchain4j-chat/src/main/resources/application.properties
+++ b/integration-tests/langchain4j-chat/src/main/resources/application.properties
@@ -17,3 +17,8 @@
 quarkus.langchain4j.ollama.chat-model.model-id=orca-mini
 quarkus.langchain4j.ollama.chat-model.temperature=0.3
 quarkus.langchain4j.ollama.timeout=30s
+
+# Uncomment to log HTTP traffic between langchain4j & the LLM API
+#quarkus.rest-client.logging.scope=request-response
+#quarkus.rest-client.logging.body-limit=10000
+#quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
