--- a/integration-test-groups/foundation/bean/src/main/resources/application.properties
+++ b/integration-test-groups/foundation/bean/src/main/resources/application.properties
@@ -21,3 +21,9 @@ my.foo.property = foo
 my.injected.property.a = Test @PropertyInject
 my.injected.property.d = Test @PropertyInject Setter Method
 my.injected.property.e = Test @PropertyInject Method Argument
+
+# DataSource Test
+quarkus.datasource.db-kind = h2
+
+quarkus.datasource."test".db-kind = h2
+quarkus.datasource."test".jdbc.url = jdbc:h2:mem:test
