Fix #6301 to resort the beans if priority is same the default one wins (#6304)

--- a/integration-test-groups/foundation/bean/src/main/resources/application.properties
+++ b/integration-test-groups/foundation/bean/src/main/resources/application.properties
@@ -17,3 +17,9 @@
 
 # A test value
 my.foo.property = foo
+
+# DataSource Test
+quarkus.datasource.db-kind = h2
+
+quarkus.datasource."test".db-kind = h2
+quarkus.datasource."test".jdbc.url = jdbc:h2:mem:test
