--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -32,6 +32,16 @@ on:
       - 'KEYS'
       - 'LICENSE.txt'
       - 'NOTICE.txt'
+      - '.github/*.sh'
+      - '.github/*.yaml'
+      - '.github/workflows/assign-issue-milestone.yaml'
+      - '.github/workflows/assign-wontfix-issue-milestone.yaml'
+      - '.github/workflows/camel-master-cron.yaml'
+      - '.github/workflows/generate-sbom-main.yml'
+      - '.github/workflows/label-issue.yaml'
+      - '.github/workflows/pr-validate.yml'
+      - '.github/workflows/quarkus-master-cron.yaml'
+      - '.github/workflows/synchronize-dependabot-branch.yaml'
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
