Migrate to com.mysql:mysql-connector-j for debezium-mysql

--- a/extensions/debezium-mysql/deployment/pom.xml
+++ b/extensions/debezium-mysql/deployment/pom.xml
@@ -45,6 +45,12 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-jdbc-mysql-deployment</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.mysql</groupId>
+                    <artifactId>mysql-connector-j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
