--- a/extensions/debezium-mysql/runtime/pom.xml
+++ b/extensions/debezium-mysql/runtime/pom.xml
@@ -53,8 +53,8 @@
             <artifactId>quarkus-jdbc-mysql</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
+                    <groupId>com.mysql</groupId>
+                    <artifactId>mysql-connector-j</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
