--- a/integration-tests/debezium/src/main/resources/application.properties
+++ b/integration-tests/debezium/src/main/resources/application.properties
@@ -15,5 +15,7 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
+quarkus.devservices.enabled=false
+
 #sql docker container's security is enabled
 quarkus.ssl.native=true
