Disable extension tests that use kubernetes-client due to #6348

--- a/integration-tests/camel-k-runtime-shutdown/pom.xml
+++ b/integration-tests/camel-k-runtime-shutdown/pom.xml
@@ -126,7 +126,7 @@
                 </plugins>
             </build>
         </profile>
-
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/6348
         <profile>
             <id>native</id>
             <activation>
@@ -160,7 +160,7 @@
                 </plugins>
             </build>
         </profile>
-
+        -->
         <profile>
             <id>virtualDependencies</id>
             <activation>
