--- a/integration-tests/master-openshift/pom.xml
+++ b/integration-tests/master-openshift/pom.xml
@@ -176,6 +176,7 @@
                 </plugins>
             </build>
         </profile>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/6348
          <profile>
              <id>native</id>
              <activation>
@@ -213,6 +214,7 @@
                  </plugins>
              </build>
          </profile>
+         -->
          <profile>
              <id>virtualDependencies</id>
              <activation>
