--- a/integration-tests/camel-k-runtime-model-reifier/pom.xml
+++ b/integration-tests/camel-k-runtime-model-reifier/pom.xml
@@ -121,6 +121,7 @@
                 <quarkus.native.native-image-xmx>6g</quarkus.native.native-image-xmx>
             </properties>
         </profile>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/6348
         <profile>
             <id>native</id>
             <activation>
@@ -154,6 +155,7 @@
                 </plugins>
             </build>
         </profile>
+        -->
         <profile>
             <id>virtualDependencies</id>
             <activation>
