changed default location of generated certificates to target/certs + change of configuration of ssl

--- a/integration-tests/grpc/src/main/resources/application.properties
+++ b/integration-tests/grpc/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-quarkus.native.resources.includes=certs/*.key,certs/*.pem,keys/*.json
+quarkus.native.resources.includes=keys/*.json
 
 # Test codegen protobuf imports
 quarkus.camel.grpc.codegen.scan-for-imports=com.google.protobuf:protobuf-java,org.apache.camel.quarkus:camel-quarkus-integration-tests-support-grpc
