Fix hashicorp-vault extension
Fixes #6254

* Depend on camel-quarkus-support-spring
* Unban spring-web
* Add integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,7 @@
         <google-cloud-sdk.container.image>gcr.io/google.com/cloudsdktool/cloud-sdk:441.0.0-emulators</google-cloud-sdk.container.image>
         <google-storage.container.image>docker.io/fsouza/fake-gcs-server:1.47.3</google-storage.container.image>
         <greenmail.container.image>docker.io/greenmail/standalone:2.0.0</greenmail.container.image>
+        <hashicorp-vault.container.image>docker.io/hashicorp/vault:1.17</hashicorp-vault.container.image>
         <ibm-mq.container.image>icr.io/ibm-messaging/mq:9.3.2.1-r1</ibm-mq.container.image>
         <influxdb.container.image>docker.io/influxdb:1.8.10</influxdb.container.image>
         <kafka.container.image>quay.io/strimzi-test-container/test-container:latest-kafka-3.2.1</kafka.container.image>
