--- a/extensions-jvm/hashicorp-vault/deployment/pom.xml
+++ b/extensions-jvm/hashicorp-vault/deployment/pom.xml
@@ -36,6 +36,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-support-spring-deployment</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-hashicorp-vault</artifactId>
         </dependency>
     </dependencies>
